--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
     <div class="corner-div corner-1">
       <a href="https://github.com/VictorMuniz7" target="_blank"><i class="fa-brands fa-github"></i></a>
     </div>
-    <img src="/assets/earth.webp" alt="Planet Earth" [style.filter]="earthGrayscale">
+    <img src="./assets/earth.webp" alt="Planet Earth" [style.filter]="earthGrayscale">
     <div class="corner-div corner-2">
       <a href="https://www.linkedin.com/in/victor-muniz-236842267/"><i class="fa-brands fa-linkedin"></i></a>
     </div>
